bugfixes and ejstatd setup